# myTextBox

./: CMakeLists.txt  main.cpp
cmake_modules/: Keyword.cpp  Keyword.h  Letter.cpp  Letter.h  LetterLower.cpp  LetterLower.h  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  Number.cpp  Number.h  Slider.cpp  Slider.h  SpecicalChar.cpp  SpecicalChar.h  Typing.cpp  Typing.h  myBase.cpp  myBase.h
